src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-dwP0.25-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault column width: P0.25\nborder on\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 312 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
